--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -169,6 +169,67 @@
   box-shadow: 0 0 11px #564b8e, 0 0 5px;
 }
 
+.project_inf {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
+  flex-direction: column;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 4em;
+}
+
+.projects > h2 {
+  color: #f376b7;
+  text-shadow: 0 0 11px #f376b7, 0 0 5px;
+  letter-spacing: 1px;
+  cursor: default;
+}
+
+.projects_set {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 2em;
+  max-width: 1300px;
+  width: 100%;
+  margin-top: 1em;
+  padding: 2em;
+  background-color: #594d9328;
+  border-radius: 5px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  backdrop-filter: blur(5.5px);
+}
+
+.projects_card {
+  border: 1px solid #564b8e;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  color: #fafafa;
+  transition: 0.2s ease;
+}
+
+.projects_cardImage {
+  display: flex;
+  position: relative;
+  width: 100%;
+  min-height: 200px;
+}
+
+.projectImage {
+  border-radius: 5px 5px 0 0;
+}
+
 .footer {
   width: 100%;
   display: flex;
@@ -187,11 +248,11 @@
     flex-direction: column-reverse;
   }
 
-  .bunny_tech {
-    display: none;
+  .skills_set {
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  .skills_set {
+  .projects_set {
     grid-template-columns: repeat(2, 1fr);
   }
 }
@@ -199,5 +260,16 @@
 @media (max-width: 630px) {
   .skills_set {
     grid-template-columns: auto;
+  }
+
+  .projects_set {
+    grid-template-columns: auto;
+  }
+}
+
+
+@media (max-width: 1200px) {
+  .bunny_tech {
+    display: none;
   }
 }
